tools Name updates and misc changes

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -63,16 +63,16 @@
                     <button type="button"  class="right orange-button " id="insert_physics-video-player" >Insert Physics Video Player</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_en" >Insert GR_U1_L1_A1_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_en" >Insert PR_U1_L1_A1_FST (en) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_en" >Insert GR_U1_L1_A2_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_en" >Insert PR_U1_L1_A2_FST (en) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_en" >Insert GR_U1_L1_A3_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_en" >Insert PR_U1_L1_A3_FST (en) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_en" >Insert GR_U1_L1_A4_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_en" >Insert PR_U1_L1_A4_FST (en) </button>
                 </div>
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_fst_l2_a1_en" >Insert PR_U1_L2_A1_FST (en) </button>
@@ -96,16 +96,16 @@
                     <button type="button"  class="right orange-button " id="insert_fst_l3_a3_en" >Insert PR_U1_L3_A3_FST (en) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_hi" >Insert GR_U1_L1_A1_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_hi" >Insert PR_U1_L1_A1_FST (hi) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_hi" >Insert GR_U1_L1_A2_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_hi" >Insert PR_U1_L1_A2_FST (hi) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_hi" >Insert GR_U1_L1_A3_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_hi" >Insert PR_U1_L1_A3_FST (hi) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_hi" >Insert GR_U1_L1_A4_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_hi" >Insert PR_U1_L1_A4_FST (hi) </button>
                 </div>
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_fst_l2_a1_hi" >Insert PR_U1_L2_A1_FST (hi) </button>
@@ -129,16 +129,16 @@
                     <button type="button"  class="right orange-button " id="insert_fst_l3_a3_hi" >Insert PR_U1_L3_A3_FST (hi) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_te" >Insert GR_U1_L1_A1_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_te" >Insert PR_U1_L1_A1_FST (Te) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_te" >Insert GR_U1_L1_A2_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_te" >Insert PR_U1_L1_A2_FST (Te) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_te" >Insert GR_U1_L1_A3_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_te" >Insert PR_U1_L1_A3_FST (Te) </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_te" >Insert GR_U1_L1_A4_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_te" >Insert PR_U1_L1_A4_FST (Te) </button>
                 </div>
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_fst_l2_a1_te" >Insert PR_U1_L2_A1_FST (Te) </button>
