--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/templates_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/templates_list.html
@@ -25,7 +25,7 @@ a:hover + .box,.box:hover{
 <h4>Select Template</h4>
     <div class="row"> 
         {% for each in templates_cur %}
-            <div class="small-12 medium-6 large-2 columns template-list" data-content="{{each.content|truncatechars:10}}">
+            <div class="small-12 medium-6 large-2 columns template-list" data-content="{{each.content}}">
                 <div class="template_tile">
                     <div class="template_preview">
                         <img src="/static/ndf/images/template-icon.png">
