--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
@@ -1,27 +1,88 @@
-<input type="button" class="enroll-btn" value="Enroll" style="width: 100px;opacity: 1;background-color: rgba(178, 178, 178, 0.01);color: #ffc14e;cursor: pointer;padding: 1px 5px 1px 5px;border-radius: 6px;font-family: OpenSans-Semibold;font-size: 17px;background-color: #4b4852;border: 2px solid white;color: white; padding:2px 2px 2px 2px;">
+{% load i18n %}
+{% load simple_filters %}
+{% load ndf_tags %}
+<input type="button" data-reveal-id="enrollBuddiesModal" class="enrollBtn" value="Enrollment" />
+
+<div id="enrollBuddiesModal" class="reveal-modal medium radius" data-reveal data-alert>
+    <div id="enrollBuddiesModalLabel">{% trans "Enrollment Status:" %}</div><br/>
+    <div class="small-12 medium-12 columns buddiesList center">
+    {% if request.session.buddies_username_id_dict %}
+      {% with request.session.buddies_username_id_dict|apply_eval as buddies_dict %}
+        {% for username,userid in buddies_dict.items %}
+          <div class="row">
+            <div class="small-8 medium-8 columns">
+              {{forloop.counter}}. {{username}} :
+            </div>
+            <div class="small-4 medium-4 columns">
+            {% if userid in group_object.author_set %}
+                <input id="exampleCheckboxSwitch_{{userid}}" type="checkbox" class="enroll_chkbox" checked disabled> Enrolled
+            {% else %}
+              <input id="exampleCheckboxSwitch_{{userid}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{userid}}')" data-user-id='{{userid}}'> Enroll
+            {% endif %}
+            </div>
+            <hr>
+            </div>
+        {% endfor %}
+      {% endwith %}
+    {% endif %}
+    </div>
+    <input type="button" class="orange-button right enroll_all_users" onclick="enroll_all_users()" value="Enroll All">
+
+    <a class="close-reveal-modal">&#215;</a>
+</div>
+
+
 <script type="text/javascript">
-$(document).on('click','.enroll-btn',function(){
-  //trigger the ajax call to enroll
-  $.ajax({
-    url: "{% url 'enroll_to_course' group_id %}",
+  function enroll_user(user_id){
+    console.log("in enroll_user func")
+    if (!user_id){
+      user_id = {{request.user.id}}
+    }
+    //trigger the ajax call to enroll
+    $.ajax({
+      url: "{% url 'enroll_to_course' group_id %}",
 
-    data: {
-      'csrfmiddlewaretoken': "{{csrf_token}}"
-    },
+      data: {
+        'csrfmiddlewaretoken': "{{csrf_token}}",
+        'user_id': user_id
+      },
 
-    type: "POST",
+      type: "POST",
 
-    dataType: "json",
+      dataType: "json",
 
-    success: function(data){
-      success_state = data["success"]
-      if(success_state){
-      $(".enroll-btn").attr('value', 'ENROLLED')
-      $(".enroll-btn").attr("disabled","disabled")
-      location.reload();
-      }
-    },
-  });//end of ajax
-})
+      success: function(data){
+        success_state = data["success"]
+        if(success_state){
+          location.reload();
+        }
+      },
+    });//end of ajax
+  }
+
+  $(document).on('click','.enroll-btn',function(){
+    user_id = $(this).attr('data-user-id')
+    enroll_user(user_id)
+  })
+
+  function enroll_all_users(){
+    var user_id_list = []
+    {% if request.session.buddies_userid_list %}
+      user_id_list = "{{request.session.buddies_userid_list}}"
+    {% endif %}
+    enroll_user(user_id_list)
+  }
+
+  $(document).ready(function(){
+    user_id_list = {{request.session.buddies_userid_list}}
+    group_member_ids = {{group_object.author_set}}
+    var isSuperset = user_id_list.every(function(val) {
+      return group_member_ids.indexOf(val) >= 0; 
+    });
+    if (isSuperset){
+      $(".enroll_all_users").addClass("hide")
+    }
+  })
+
 
 </script>
