Include logged in user in enrollment list. Highlight ENroll label

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -4904,3 +4904,8 @@ ul.nav_menu_1 > li > a.selected, ul.nav_menu_1 > li > a:hover {
   font-weight: bold;
   border: 2px solid rgba(255, 255, 255, 0.7);
 }
+
+/* line 5100, ../../../scss/_clix2017.scss */
+.enroll-act_lbl {
+  color: #0c2944;
+}
