--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
@@ -6,25 +6,37 @@
 <div id="enrollBuddiesModal" class="reveal-modal medium radius" data-reveal data-alert>
     <h4 id="enrollBuddiesModalLabel">{% trans "Enrollment Status:" %}</h4><br/>
     <div class="small-12 medium-12 columns buddiesList center">
+    <div class="row">
+      <div class="small-8 medium-8 columns">
+      {{request.user.username}}
+      </div>
+      <div class="small-4 medium-4 columns">
+      {% if request.user.pk in group_object.author_set %}
+          <input id="enrollchk_{{request.user.pk}}" type="checkbox" class="enroll_chkbox" checked disabled><label for="enrollchk_{{request.user.pk}}"> Enrolled</label>
+      {% else %}
+          <input id="enrollchk_{{request.user.pk}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{request.user.pk}}')" data-user-id='{{request.user.pk}}'><label for="enrollchk_{{request.user.pk}}" class="enroll-act_lbl"> Enroll</label>
+      {% endif %}
+      </div>
+      <hr>
+
     {% if request.session.buddies_username_id_dict %}
       {% with request.session.buddies_username_id_dict|apply_eval as buddies_dict %}
         {% for username,userid in buddies_dict.items %}
-          <div class="row">
             <div class="small-8 medium-8 columns">
               {{forloop.counter}}. {{username}} :
             </div>
             <div class="small-4 medium-4 columns">
             {% if userid in group_object.author_set %}
-                <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" checked disabled> Enrolled
+                <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" checked disabled><label for="enrollchk_{{userid}}" > Enrolled</label>
             {% else %}
-              <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{userid}}')" data-user-id='{{userid}}'> Enroll
+              <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{userid}}')" data-user-id='{{userid}}'><label for="enrollchk_{{userid}}" class="enroll-act_lbl"> Enroll</label>
             {% endif %}
             </div>
             <hr>
-            </div>
         {% endfor %}
       {% endwith %}
     {% endif %}
+    </div>
     </div>
     <input type="button" class="orange-button right enroll_all_users" onclick="enroll_all_users()" value="Enroll All">
 
@@ -82,6 +94,8 @@
       $(".enroll_all_users").addClass("hide")
     }
   })
+
+
 
 
 </script>
