--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -6,160 +6,160 @@
 <div class="editor_modal_content">
             <a class="close-reveal-modal" aria-label="Close">&#215;</a>
             <div class="medium-12 columns">
-                <h3>Insert Assessment</h3>
+                <h3>{% trans "Insert Assessment" %}</h3>
                 <div class="left small-12 medium-9 columns" class="app_desc">
                 <input type="text" placeholder="" class="required" id ="paste-area-assessment"/>
                 </div>
                 <div class="right small-12 medium-3 columns">
-                    <button inline type="button"  class="right orange-button" id="insert_assessment" >Add Assessment</button>
+                    <button inline type="button"  class="right orange-button" id="insert_assessment" >{% trans "Add Assessment" %}</button>
                 </div>
             </div>
 </div>
-                <h3>Insert Tools</h3>
+                <h3>{% trans "Insert Tools" %}</h3>
             
             <div class="row outer">
                 <br>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button" id="insert_ost" >Insert Open Story Tool</button>
+                    <button type="button"  class="right orange-button" id="insert_ost" >{% trans "Insert Open Story Tool" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button" id="insert_policequad_en" >Insert PoliceQuad En</button>
+                    <button type="button"  class="right orange-button" id="insert_policequad_en" >{% trans "Insert PoliceQuad En" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button" id="insert_policequad_hi" >Insert PoliceQuad Hi</button>
+                    <button type="button"  class="right orange-button" id="insert_policequad_hi" >{% trans "Insert PoliceQuad Hi" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button" id="insert_policequad_te" >Insert PoliceQuad Te</button>
+                    <button type="button"  class="right orange-button" id="insert_policequad_te" >{% trans "Insert PoliceQuad Te" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button" id="insert_geogebra_geometric_reasoning" >Insert Geogebra Geometric Reasoning</button>
+                    <button type="button"  class="right orange-button" id="insert_geogebra_geometric_reasoning" >{% trans "Insert Geogebra Geometric Reasoning" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_runkittyrun" >Insert Run Kitty Run</button>
+                    <button type="button"  class="right orange-button " id="insert_runkittyrun" >{% trans "Insert Run Kitty Run" %}</button>
                 </div>
                 <div class="inner">
-                    <button type="button"  class="right orange-button " id="insert_turtle" >Insert TurtleJS</button>
+                    <button type="button"  class="right orange-button " id="insert_turtle" >{% trans "Insert TurtleJS" %}</button>
                 </div>
                 {%comment%}
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_earth_rotation" >Insert Motion of the Earth</button>
+                    <button type="button"  class="right orange-button " id="insert_earth_rotation" >{% trans "Insert Motion of the Earth" %}</button>
                 </div>
                 {% endcomment %}
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning1" >Geogebra Proportional Reasoning 1</button>
+                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning1" >{% trans "Geogebra Proportional Reasoning 1" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning2_a1_q1" >Geogebra Proportional Reasoning 2 A1 Q1</button>
+                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning2_a1_q1" >{% trans "Geogebra Proportional Reasoning 2 A1 Q1" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning2_a1_q3" >Geogebra Proportional Reasoning 2 A1 Q3</button>
+                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning2_a1_q3" >{% trans "Geogebra Proportional Reasoning 2 A1 Q3" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning2_a2_q1" >Geogebra Proportional Reasoning 2 A2 Q1</button>
+                    <button type="button"  class="right orange-button " id="insert_geogebra_proportional_reasoning2_a2_q1" >{% trans "Geogebra Proportional Reasoning 2 A2 Q1" %}</button>
                 </div>
             </div>
             <div class="row outer">
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_physics-video-player" >Insert Physics Video Player</button>
+                    <button type="button"  class="right orange-button " id="insert_physics-video-player" >{% trans "Insert Physics Video Player" %}</button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_en" >Insert PR_U1_L1_A1_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_en" >{% trans "Insert PR_U1_L1_A1_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_en" >Insert PR_U1_L1_A2_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_en" >{% trans "Insert PR_U1_L1_A2_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_en" >Insert PR_U1_L1_A3_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_en" >{% trans "Insert PR_U1_L1_A3_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_en" >Insert PR_U1_L1_A4_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_en" >{% trans "Insert PR_U1_L1_A4_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a1_en" >Insert PR_U1_L2_A1_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a1_en" >{% trans "Insert PR_U1_L2_A1_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a2_en" >Insert PR_U1_L2_A2_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a2_en" >{% trans "Insert PR_U1_L2_A2_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a3_en" >Insert PR_U1_L2_A3_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a3_en" >{% trans "Insert PR_U1_L2_A3_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a4_en" >Insert PR_U1_L2_A4_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a4_en" >{% trans "Insert PR_U1_L2_A4_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a1_en" >Insert PR_U1_L3_A1_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a1_en" >{% trans "Insert PR_U1_L3_A1_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a2_en" >Insert PR_U1_L3_A2_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a2_en" >{% trans "Insert PR_U1_L3_A2_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a3_en" >Insert PR_U1_L3_A3_FST (en) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a3_en" >{% trans "Insert PR_U1_L3_A3_FST (en)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_hi" >Insert PR_U1_L1_A1_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_hi" >{% trans "Insert PR_U1_L1_A1_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_hi" >Insert PR_U1_L1_A2_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_hi" >{% trans "Insert PR_U1_L1_A2_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_hi" >Insert PR_U1_L1_A3_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_hi" >{% trans "Insert PR_U1_L1_A3_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_hi" >Insert PR_U1_L1_A4_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_hi" >{% trans "Insert PR_U1_L1_A4_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a1_hi" >Insert PR_U1_L2_A1_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a1_hi" >{% trans "Insert PR_U1_L2_A1_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a2_hi" >Insert PR_U1_L2_A2_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a2_hi" >{% trans "Insert PR_U1_L2_A2_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a3_hi" >Insert PR_U1_L2_A3_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a3_hi" >{% trans "Insert PR_U1_L2_A3_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a4_hi" >Insert PR_U1_L2_A4_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a4_hi" >{% trans "Insert PR_U1_L2_A4_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a1_hi" >Insert PR_U1_L3_A1_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a1_hi" >{% trans "Insert PR_U1_L3_A1_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a2_hi" >Insert PR_U1_L3_A2_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a2_hi" >{% trans "Insert PR_U1_L3_A2_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a3_hi" >Insert PR_U1_L3_A3_FST (hi) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a3_hi" >{% trans "Insert PR_U1_L3_A3_FST (hi)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_te" >Insert PR_U1_L1_A1_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a1_te" >{% trans "Insert PR_U1_L1_A1_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_te" >Insert PR_U1_L1_A2_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a2_te" >{% trans "Insert PR_U1_L1_A2_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_te" >Insert PR_U1_L1_A3_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a3_te" >{% trans "Insert PR_U1_L1_A3_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_te" >Insert PR_U1_L1_A4_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l1_a4_te" >{% trans "Insert PR_U1_L1_A4_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a1_te" >Insert PR_U1_L2_A1_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a1_te" >{% trans "Insert PR_U1_L2_A1_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a2_te" >Insert PR_U1_L2_A2_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a2_te" >{% trans "Insert PR_U1_L2_A2_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a3_te" >Insert PR_U1_L2_A3_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a3_te" >{% trans "Insert PR_U1_L2_A3_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l2_a4_te" >Insert PR_U1_L2_A4_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l2_a4_te" >{% trans "Insert PR_U1_L2_A4_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a1_te" >Insert PR_U1_L3_A1_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a1_te" >{% trans "Insert PR_U1_L3_A1_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a2_te" >Insert PR_U1_L3_A2_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a2_te" >{% trans "Insert PR_U1_L3_A2_FST (Te)" %} </button>
                 </div>
                 <div  class="inner">
-                    <button type="button"  class="right orange-button " id="insert_fst_l3_a3_te" >Insert PR_U1_L3_A3_FST (Te) </button>
+                    <button type="button"  class="right orange-button " id="insert_fst_l3_a3_te" >{% trans "Insert PR_U1_L3_A3_FST (Te)" %} </button>
                 </div>
 
 
