--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
@@ -12,9 +12,9 @@
       </div>
       <div class="small-4 medium-4 columns">
       {% if request.user.pk in group_object.author_set %}
-          <input id="enrollchk_{{request.user.pk}}" type="checkbox" class="enroll_chkbox" checked disabled><label for="enrollchk_{{request.user.pk}}"> Enrolled</label>
+          <input id="enrollchk_{{request.user.pk}}" type="checkbox" class="enroll_chkbox" checked disabled><label for="enrollchk_{{request.user.pk}}">{% trans  "Enrolled" %} </label>
       {% else %}
-          <input id="enrollchk_{{request.user.pk}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{request.user.pk}}')" data-user-id='{{request.user.pk}}'><label for="enrollchk_{{request.user.pk}}" class="enroll-act_lbl"> Enroll</label>
+          <input id="enrollchk_{{request.user.pk}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{request.user.pk}}')" data-user-id='{{request.user.pk}}'><label for="enrollchk_{{request.user.pk}}" class="enroll-act_lbl">{% trans "Enroll" %} </label>
       {% endif %}
       </div>
       <hr>
@@ -27,9 +27,9 @@
             </div>
             <div class="small-4 medium-4 columns">
             {% if userid in group_object.author_set %}
-                <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" checked disabled><label for="enrollchk_{{userid}}" > Enrolled</label>
+                <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" checked disabled><label for="enrollchk_{{userid}}" >{% trans "Enrolled" %} </label>
             {% else %}
-              <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{userid}}')" data-user-id='{{userid}}'><label for="enrollchk_{{userid}}" class="enroll-act_lbl"> Enroll</label>
+              <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{userid}}')" data-user-id='{{userid}}'><label for="enrollchk_{{userid}}" class="enroll-act_lbl"> {% trans "Enroll" %}</label>
             {% endif %}
             </div>
             <hr>
